--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "dev": "vite",
     "build": "vite build", 
     "preview": "vite preview" 
+  },
+    "devDependencies": {
+    "vite": "^6.3.5"
   }
 }
